@@ -1,3 +1,8 @@
+Fri May 18 18:13:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (MakeMakefile#configuration): keep space at end of
+	  OUTFLAG and COUTFLAG.  [ruby-dev:45650]
+
 Fri May 18 00:04:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_fstat, rb_w32_fstati64): convert FILETIME
